--- a/mods/harvest-with-ease.pw.toml
+++ b/mods/harvest-with-ease.pw.toml
@@ -1,6 +1,6 @@
 name = "Harvest with ease"
 filename = "harvestwithease-1.20.1-8.0.1.0-fabric.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/W4Ajthd2/versions/n6micWfq/harvestwithease-1.20.1-8.0.1.0-fabric.jar"
