--- a/mods/portable-crafting.pw.toml
+++ b/mods/portable-crafting.pw.toml
@@ -1,6 +1,6 @@
 name = "Portable Crafting"
 filename = "portable-crafting-2.2.1+1.19.3.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/qmVRzDCY/versions/Vk4WePaR/portable-crafting-2.2.1%2B1.19.3.jar"
