--- a/mods/quickbench.pw.toml
+++ b/mods/quickbench.pw.toml
@@ -1,6 +1,6 @@
 name = "QuickBench"
 filename = "quickbench-4.1.0+mc.1.20.1.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/v2yISwb0/versions/EYrqPaBk/quickbench-4.1.0%2Bmc.1.20.1.jar"
