--- a/mods/repurposed-structures-fabric.pw.toml
+++ b/mods/repurposed-structures-fabric.pw.toml
@@ -1,6 +1,6 @@
 name = "Repurposed Structures - Quilt/Fabric"
 filename = "repurposed_structures-7.1.11+1.20.1-fabric.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/muf0XoRe/versions/VxJqyOqo/repurposed_structures-7.1.11%2B1.20.1-fabric.jar"
