--- a/mods/tinkerers-smithing.pw.toml
+++ b/mods/tinkerers-smithing.pw.toml
@@ -1,6 +1,6 @@
 name = "Tinkerer's Smithing"
 filename = "tinkerers-smithing-2.6.7+1.20.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/RhVpNN5O/versions/eyId6eMd/tinkerers-smithing-2.6.7%2B1.20.jar"
