--- a/config/openpartiesandclaims-server.toml
+++ b/config/openpartiesandclaims-server.toml
@@ -205,6 +205,7 @@ forcedBlockProtectionExceptionList = [
     "minecraft:crafting_table",
     "#fwaystones:waystones",
     "yigd:grave",
+    "#lootr:containers",
 ]
 # Custom groups of blocks that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple blocks and block tags.
 # A group without a prefix creates a player config option for the right-click interaction with the group blocks. The format for a block group is <group ID>{<blocks/tags/wildcards separated by ,>}.
@@ -237,7 +238,10 @@ blockProtectionOptionalExceptionGroups = [
 # Prefix "anything$" is the same as no prefix but allows interaction with any item held in the hand. Please make sure that no item does anything bad when used at an entity with such an exception.
 # Add the same entity/tag multiple times to use multiple prefixes. Supports patterns with special characters *, (, ) and |, where * matches anything, ( ) are used for grouping and | means OR.
 # For example ["minecraft:villager", "break$minecraft:villager", "break$minecraft:(trader_|)llama"]
-forcedEntityProtectionExceptionList = ["minecraft:minecart"]
+forcedEntityProtectionExceptionList = [
+  "minecraft:minecart",
+  "lootr:lootr_minecart",
+]
 # Custom groups of entities that a player/claim config should be able to make protection exceptions for. Each group can consist of multiple entities and entity tags.
 # A group without a prefix creates a player config option for the right-click interaction with the group entities. The format for an entity group is <group ID>{<entities/tags/wildcards separated by ,>}.
 # The group ID should consist of at most 32 characters that are letters A-Z, numbers 0-9 or the - and _ characters, e.g. "ePiC-GUYS98{minecraft:pig, minecraft:c(ow|at), #minecraft:beehive_inhabitors}".
